# PhoenixDemiGod-System

./: .coverage  .flake8  .gitignore  .manager_token  .pre-commit-config.yaml  .worker_token  ARCHITECTURE.md  CTO_CHECKLIST_HIPERBOLICO_PHOENIX_DEMIGOD.md  Caddyfile  Containerfile  Containerfile.test  EVENT_ROUTING_MIGRATION_SUMMARY.md  EVENT_STORE_IMPLEMENTATION_SUMMARY.md  INSTRUCCIONES.md  NEOTEC_application_20250723.json  NISO_IZZY.TXT  NOTICE  PHOENIX-HYDRA-DEPLOYMENT-REPORT.md  PHOENIX-HYDRA-TODO-CHECKLIST.md  PROJECT-COMPLETION-STATUS.md  Phoenix Hydra_ Guía Completa.md  README.md  ROUTER_CORRELATOR_IMPLEMENTATION_SUMMARY.md  completion_percentage_validator.py  completion_roadmap_generator.py  compose.yaml  config.json  config.yaml  deploy.ps1  deploy.sh  enable_auto_venv.ps1  index.html  jest.config.js  modelos.txt  nginx-test.conf  package-lock.json  package.json  phoenix_hydra_completion_roadmap.md  phoenix_hydra_review_test.py  phoenix_hydra_system_review_validation_report.md  (+22 more)
.kiro/: __init__.py  hooks_refactor_completion_summary.md  hooks_refactor_plan.md  hooks_refactor_progress.md  main.py
__tests__/: comprehensive-migration-validation.test.js  deployment.integration.test.js  migration-validation.test.js  network-connectivity.test.js  performance-comparison.test.js  podman-migration.integration.test.js
compose/: Dockerfile
configs/: health.html  nginx-phoenix-core.html  pytest.ini  terraform.tfstate
context_windows/: zone_context_manager.py
docs/: ONBOARDING.md  README.md  SECURE_CREDENTIALS_SETUP.md  agent_hooks_migration_plan.md  agents.md  (+30 more)
(+816 files in other folders)
