[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phoenix-demigod-tests"
version = "0.1.0"
description = "Tests for Phoenix DemiGod v8.7 - Sistema cognitivo modular"
authors = [
  { name="Phoenix Team", email="contact@phoenix.ai" },
]
license = { file="LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "requests",
    "pydantic==2.9.2",
    "ollama",
    "autogen==0.4.0",
    "openai==1.47.0"
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio",
    "anyio",
    "black",
    "flake8",
    "ruff==0.6.9",
    "httpx"
]

[project.urls]
"Homepage" = "https://github.com/Phoenixai36/BooPhoenix369"
"Bug Tracker" = "https://github.com/Phoenixai36/BooPhoenix369/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
testpaths = ["autogen/tests"]
addopts = "-ra -q"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.flake8]
max-line-length = 88
extend-ignore = ['E203', 'W503']

[tool.ruff]
line-length = 88
select = ["E", "F", "W"]
ignore = ["E203"]
